[tool.poetry]
name = "fiuba_redes_tp3"
version = "0.1.0"
description = ""
authors = ["efoppiano <efoppiano@fi.uba.ar>"]

[tool.poetry.dependencies]
python = "^3.8"
mininet = "^2.3.0-alpha.6"
black = "^24.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
